--- a/project/frontend/personal-crm/package.json
+++ b/project/frontend/personal-crm/package.json
@@ -9,8 +9,9 @@
     "@mui/material": "^6.4.3",
     "axios": "^1.7.9",
     "cra-template": "1.2.0",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
+    "react": "^18.3.1",
+    "react-big-calendar": "^1.17.1",
+    "react-dom": "^18.3.1",
     "react-pro-sidebar": "^1.1.0",
     "react-router-dom": "^7.1.5",
     "react-scripts": "5.0.1"
@@ -19,7 +20,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "prepare": "npm run build"
   },
   "eslintConfig": {
     "extends": [
