--- a/project/frontend/personal-crm/package.json
+++ b/project/frontend/personal-crm/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@divyanshu013/inspirational-quotes": "^1.0.7",
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
     "@mui/icons-material": "^6.4.3",
