--- a/project/frontend/personal-crm/package.json
+++ b/project/frontend/personal-crm/package.json
@@ -10,6 +10,7 @@
     "@mui/material": "^6.4.3",
     "axios": "^1.7.9",
     "cra-template": "1.2.0",
+    "moment-timezone": "^0.5.47",
     "react": "^18.3.1",
     "react-big-calendar": "^1.17.1",
     "react-dom": "^18.3.1",
