--- a/project/frontend/personal-crm/package.json
+++ b/project/frontend/personal-crm/package.json
@@ -9,6 +9,7 @@
     "@google/generative-ai": "^0.22.0",
     "@mui/icons-material": "^6.4.3",
     "@mui/material": "^6.4.3",
+    "@react-oauth/google": "^0.12.1",
     "axios": "^1.7.9",
     "cra-template": "1.2.0",
     "moment-timezone": "^0.5.47",
