--- a/project/frontend/personal-crm/package.json
+++ b/project/frontend/personal-crm/package.json
@@ -8,6 +8,7 @@
     "@emotion/styled": "^11.14.0",
     "@mui/icons-material": "^6.4.3",
     "@mui/material": "^6.4.3",
+    "@react-oauth/google": "^0.12.1",
     "axios": "^1.7.9",
     "cra-template": "1.2.0",
     "react": "^18.3.1",
