--- a/project/frontend/personal-crm/package.json
+++ b/project/frontend/personal-crm/package.json
@@ -17,6 +17,7 @@
     "react-big-calendar": "^1.17.1",
     "react-dom": "^18.3.1",
     "react-pro-sidebar": "^1.1.0",
+    "react-responsive": "^10.0.1",
     "react-router-dom": "^7.1.5",
     "react-scripts": "5.0.1"
   },
