--- a/.github/workflows/django-tests.yml
+++ b/.github/workflows/django-tests.yml
@@ -12,7 +12,7 @@ jobs:
     strategy:
       max-parallel: 4
       matrix:
-        python-version: [3.7, 3.8, 3.9]
+        python-version: [3.10, 3.11]
 
     steps:
     - uses: actions/checkout@v4
@@ -23,8 +23,9 @@ jobs:
     - name: Install Dependencies
       run: |
         python -m pip install --upgrade pip
-        chmod +x startup.sh
-        ./startup.sh
+        chmod +x project/backend/startup.sh
+        ./project/backend/startup.sh
+        pip install -r project/backend/requirements.txt
     - name: Run Tests
       run: |
         python manage.py test accounts.tests
