--- a/.github/workflows/django-tests.yml
+++ b/.github/workflows/django-tests.yml
@@ -9,17 +9,13 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
-    strategy:
-      max-parallel: 4
-      matrix:
-        python-version: [3.10, 3.11]
 
     steps:
-    - uses: actions/checkout@v4
-    - name: Set up Python ${{ matrix.python-version }}
+    - uses: actions/checkout@v3
+    - name: Set up Python 3.11
       uses: actions/setup-python@v3
       with:
-        python-version: ${{ matrix.python-version }}
+        python-version: '3.11'
     - name: Install Dependencies
       run: |
         python -m pip install --upgrade pip
@@ -28,6 +24,7 @@ jobs:
         pip install -r project/backend/requirements.txt
     - name: Run Tests
       run: |
+        cd project/backend
         python manage.py test accounts.tests
         python manage.py test contacts.tests
         python manage.py test calendarapi.tests
